# web-project

./: crud.py  item_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1aa4d132e4c3_create_user_table.py  90d8cf051cc2_create_products_table.py  9cd947d75220_create_orders_table_and_order_product_.py  b69aeabd389b_add_relation_between_user_and_profiles_.py  d1ebffa47328_create_post_table.py  dc62cf7ca496_create_profiles_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependecies.py  schemas.py  views.py
core/: __init__.py  config.py
core/models/: __init__.py  mixin.py  order.py  order_product_association.py  post.py  product.py  profile.py  session.py  user.py
docker/: docker-compose.yaml
users/: dal.py  schemas.py  views.py
